--- a/PA1_template.html
+++ b/PA1_template.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>Loading and preprocessing the data</title>
+<title>Reproducible Research: Peer Assessment 1</title>
 
 <!-- Styles for R syntax highlighter -->
 <style type="text/css">
@@ -190,6 +190,8 @@ hr {
 </head>
 
 <body>
+<h1>Reproducible Research: Peer Assessment 1</h1>
+
 <p>Setting the libraries and global options for the document:</p>
 
 <pre><code class="r">## Peer assessment 1 - Scuba22
